Done Custom Theme

--- a/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
+++ b/assets/scss/components/stencil/heroCarousel/_heroCarousel.scss
@@ -255,6 +255,9 @@
 
     .heroCarousel-image-wrapper {
         height: fit-content;
+
+        /* Fix Bug Carousel */
+        overflow: hidden;
         
         .heroCarousel-image {
             @media (max-width: 550px) {
