--- a/templates/components/common/navigation-menu.html
+++ b/templates/components/common/navigation-menu.html
@@ -48,7 +48,19 @@
     <ul class="navPages-list navPages-list--user">
         <li class="navPages-item flex-align-center navPages-item--account">
             <div class="header-top__icon">
-                <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-account-icon.png" alt="Acount Icon">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="11.053" height="15" viewBox="0 0 11.053 15">
+                    <defs>
+                    <clipPath id="clip-path">
+                        <rect id="Rectangle_6" data-name="Rectangle 6" width="11.053" height="15" fill="#ff5100"></rect>
+                    </clipPath>
+                    </defs>
+                    <g id="Group_142" data-name="Group 142" transform="translate(-20)">
+                        <g id="Group_139" data-name="Group 139" transform="translate(20)" clip-path="url(#clip-path)">
+                        <path id="Path_80" data-name="Path 80" d="M7.105,11H3.947A3.952,3.952,0,0,0,0,14.947v2.368H11.053V14.947A3.952,3.952,0,0,0,7.105,11m2.368,4.737H1.579v-.789a2.371,2.371,0,0,1,2.368-2.368H7.105a2.371,2.371,0,0,1,2.368,2.368Z" transform="translate(0 -2.316)" fill="#ff5100"></path>
+                        <path id="Path_81" data-name="Path 81" d="M5.947,7.895A3.947,3.947,0,1,0,2,3.947,3.952,3.952,0,0,0,5.947,7.895m0-6.316A2.368,2.368,0,1,1,3.579,3.947,2.371,2.371,0,0,1,5.947,1.579" transform="translate(-0.421)" fill="#ff5100"></path>
+                        </g>
+                    </g>
+                </svg>
             </div>
             {{#if customer}}
                 <a class="navUser-action header-top__text"
@@ -85,7 +97,7 @@
         <li class="navPages-item flex-align-center navPages-item--wishList">
             <a href="#" class="header-top__link navUser-item  flex-align-center">
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-heart-icon.png" alt="Wish List Icon">
+                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/heart.png" alt="Wish List Icon">
                 </div>
                 <span class="header-top__text">
                     Wish List
@@ -96,7 +108,16 @@
         <li class="navPages-item flex-align-center navPages-item--cart">
             <a href="{{urls.cart}}" class="header-top__link navUser-item  flex-align-center">
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-cart-icon.png" alt="Cart Icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="Group_147" data-name="Group 147" width="14.468" height="15" viewBox="0 0 14.468 15">
+                        <defs>
+                          <clipPath id="clip-path">
+                            <rect id="Rectangle_9" data-name="Rectangle 9" width="14.468" height="15" fill="#ff5100"></rect>
+                          </clipPath>
+                        </defs>
+                        <g id="Group_146" data-name="Group 146" clip-path="url(#clip-path)">
+                          <path id="Path_83" data-name="Path 83" d="M11.053,10.263h-6.8l.264-.789h7.921l2.031-7.105H2.877L2.166,0H0V1.579H.992L3.119,8.672,2.56,10.349a2.385,2.385,0,1,0,2.821,1.493H8.829a2.342,2.342,0,0,0-.145.789,2.368,2.368,0,1,0,2.368-2.368m1.322-6.316L11.247,7.895H4.535L3.351,3.947ZM3.947,12.632a.789.789,0,1,1-.789-.789.79.79,0,0,1,.789.789m7.105.789a.789.789,0,1,1,.789-.789.79.79,0,0,1-.789.789" fill="#ff5100"></path>
+                        </g>
+                    </svg>
                 </div>
                 <span class="header-top__text">
                     {{lang 'common.cart'}}
@@ -107,7 +128,12 @@
         <li class="navPages-item flex-align-center navPages-item--quote">
             <a href="/quotes-list/add-to-quote" class="header-top__link flex-align-center navUser-item">
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-quote-icon.png" alt="Quote Icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" id="quote" width="13.333" height="15" viewBox="0 0 13.333 15">
+                        <path id="Path_84" data-name="Path 84" d="M9.167,10.833h2.154L9.167,12.988Zm-7.5-9.167h10v7.5H7.5v4.167H1.667ZM0,0V15H9.512l3.822-3.821V0Z" fill="#ff5100"></path>
+                        <rect id="Rectangle_10" data-name="Rectangle 10" width="8" height="2" transform="translate(2.667 3.25)" fill="#ff5100"></rect>
+                        <rect id="Rectangle_11" data-name="Rectangle 11" width="8" height="2" transform="translate(2.667 6.5)" fill="#ff5100"></rect>
+                        <rect id="Rectangle_12" data-name="Rectangle 12" width="3" height="2" transform="translate(3.18 9.75)" fill="#ff5100"></rect>
+                    </svg>
                 </div>
                 <span class="header-top__text">
                     My Quote
@@ -118,7 +144,7 @@
         <li class="navPages-item flex-align-center navPages-item--call">
             <a href="#" class="header-top__link flex-align-center">
                 <div class="header-top__icon">
-                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-trade-icon.png" alt="Trade Icon">
+                    <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-trade-icon.png" alt="Trade Icon">
                 </div>
                 <span class="header-top__text">
                     {{theme_settings.header-top-left-1}}
