--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -37,6 +37,18 @@
 .footer-info {
     @include grid-row($behavior: nest);
     font-size: 0; // 1
+
+    .footer-logo-link {
+        @media (max-width: 767px) {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .footer-logo-image {
+                margin-bottom: 12px;
+            }
+        }
+    }
 }
 
 .footer-info-col {
@@ -182,25 +194,64 @@
         }
     
         &:nth-child(2) {
-            max-width: calc(16.66666% - 5px);
+            max-width: calc(16.66666% - 0px);
         }
     
         &:nth-child(3) {
-            max-width: calc(16.66666% - 2px);
+            max-width: calc(16.66666% - 0px);
         }
     
         &:nth-child(4) {
-            width: calc(16.66666% + 10px);
+            width: calc(16.66666% + 0px);
         }
+    }
+
+    @media (min-width: 1025px) {
+        margin-bottom: 25px;
+
+        &.footer-info-col--small {
+            margin-top: 25px;
+
+            .footer-info-list {
+                > li {
+                    margin-top: 2px;
+                }
+            }
+        }
+    }
+
+    @media (max-width: 1024px) {
+        margin-bottom: 12px;
     }
 
     @media (max-width: 550px) {
         text-align: left;
-        border-bottom: 1px solid #707070;
+        // border-bottom: 1px solid #707070;
         margin-bottom: 0;
         padding-top: 5px;
         padding-bottom: 5px;
         cursor: pointer;
+        
+        &::after {
+            content: "";
+            position: absolute;
+            left: 10.5px;
+            width: calc(100% - 21px);
+            height: 1px;
+            background-color: #707070;
+        }
+    }
+
+    &.footer-info-col--contact {
+        &::after {
+            content: unset;
+        } 
+
+        .footer-info-heading {
+            @media (min-width: 1025px) {
+                margin-bottom: 12px;
+            }
+        }
     }
 
     .footer-info-heading {
@@ -268,7 +319,7 @@
     }
 
     .custom-footer-intro-image  {
-        margin-top: 20px;
+        margin-top: 28px;
 
         + p {
             margin-top: -4px;
@@ -333,6 +384,9 @@
                 line-height: 18px;
                 font-weight: 600;
                 color: #232323;
+
+                padding: 3px 7px 6px 11px;
+                transform: translate(2px, -1px);
             }
         }
     }
